# noregret

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  build.sh  conan_provider.cmake  conandata.yml  conanfile.py  configure.sh  pyproject.toml  setup.py
.github/workflows/: build-matrix.json  cpp.yml
benchmark/: bench_cfr.hpp  bench_mccfr.hpp  main.cpp
cmake/in/: nor.pc.in  norConfig.cmake.in
cmake/settings/: CPM.cmake  Cache.cmake  Clang-cxx-dev-tools.cmake  CompilerWarnings.cmake  Conan.cmake  Doxygen.cmake  Installation.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  Utilities.cmake
cmake/targets/: benchmark.cmake  games.cmake  nor.cmake  pynor.cmake  sandbox.cmake  shared_libs.cmake  tests.cmake
docs/: nor_bibliography.bib
src/common/include/common/: common.hpp  logging_macros.hpp  macro.hpp  misc.hpp  string_utils.hpp  types.hpp
src/games/kuhn_poker/impl/: state.cpp
src/games/kuhn_poker/include/kuhn_poker/: kuhn_poker.hpp  state.hpp  utils.hpp
src/games/leduc_poker/impl/: state.cpp
src/games/leduc_poker/include/leduc_poker/: leduc_poker.hpp  state.hpp  utils.hpp
src/games/rock_paper_scissors/impl/: state.cpp
src/games/rock_paper_scissors/include/rock_paper_scissors/: rock_paper_scissors.hpp  state.hpp  utils.hpp
src/games/stratego/: Action.h  Config.hpp  Game.cpp  Game.h  Logic.cpp  Logic.h  State.cpp  State.h  StrategoDefs.hpp  main.cpp  utils.cpp  utils.hpp
src/games/stratego/core/include/aze/: utils.h
src/games/stratego/impl/: Config.cpp  Game.cpp  Logic.cpp  State.cpp  Utils.cpp  main.cpp  utils.cpp
src/games/stratego/include/stratego/: Action.hpp  Agent.h  Config.hpp  Defs.h  Game.h  Game.hpp  Logic.h  Logic.hpp  Piece.hpp  Position.h  State.h  State.hpp  StrategoDefs.hpp  Utils.hpp  arena.h  permutations.h  prime_list.h  stratego.hpp  utils.hpp
src/games/stratego/include/stratego/core/include/aze/: arena.h  aze.h  game.h  utils.h
src/games/stratego/include/stratego/core/include/aze/agent/: Agent.h
src/games/texas_holdem_poker/impl/: state.cpp
src/games/texas_holdem_poker/include/texas_holdem_poker/: state.hpp  texas_holdem_poker.hpp  utils.hpp
src/libnor/impl/: kuhn.cpp  kuhn_env.cpp  leduc.cpp  rps.cpp  rps_env.cpp  stratego.cpp  stratego_env.cpp  stratego_game.cpp
src/libnor/include/nor/: at_runtime.hpp  cfr.hpp  concepts.hpp  env.hpp  exploitability.hpp  factory.hpp  fosg_helpers.hpp  fosg_states.hpp  fosg_traits.hpp  fwd.hpp  game_defs.hpp  holder.hpp  nor.hpp  policy.hpp  rm.hpp  tag.hpp  type_defs.hpp  utils.hpp  wrappers.hpp
src/libnor/include/nor/cfr/: cfr.py  cfr_factory.hpp  factory.hpp  node.hpp  rm.hpp  vanilla.hpp
src/libnor/include/nor/concepts/: concrete.hpp  has.hpp  is.hpp  traits.hpp
src/libnor/include/nor/env/: kuhn.hpp  kuhn_env.hpp  leduc.hpp  polymorphic.hpp  polymorphic_env.hpp  rps.hpp  rps_env.hpp  stratego.hpp  stratego_env.hpp
src/libnor/include/nor/policy/: action_policy.hpp  best_response.hpp  default_policy.hpp  policy.hpp  policy_view.hpp  state_policy_view.hpp  tabular_policy.hpp
src/libnor/include/nor/rm/: algorithms.hpp  best_response.hpp  cfr_base_tabular.hpp  cfr_config.hpp  cfr_discounted.hpp  cfr_exponential.hpp  cfr_monte_carlo.hpp  cfr_plus.hpp  cfr_utils.hpp  cfr_vanilla.hpp  factory.hpp  forest.hpp  mccfr.hpp  node.hpp  pluscfr.hpp  policy_value.hpp  rm_utils.hpp  tabular_cfr_base.hpp  tag.hpp  vanilla.hpp  vcfr.hpp
src/libnor/include/nor/rm/cfr_tabular/: cfr.hpp  cfr.tcc  cfr_base.hpp  mccfr.hpp  mccfr.tcc
src/libnor/include/nor/rm/policy/: action_policy.hpp  best_response.hpp  default_policy.hpp  policy.hpp  tabular_policy.hpp
src/libnor/include/nor/utils/: macro.hpp  player_informed_type.hpp  player_vector.hpp  string_utils.hpp  type_traits.hpp  utils.hpp
src/libnor/include/nor/wrappers/: kuhn_env.hpp  rps_env.hpp  stratego_env.hpp  stratego_game.hpp
src/nor/: __init__.py
src/nor/binding/: declarations.hpp  default_infostate.cpp  enums.cpp  env_polymorph.cpp  module.cpp  policy.cpp
src/nor/binding/env/: py_action.hpp  py_chance_outcome.hpp  py_env.hpp  py_infostate.hpp  py_observation.hpp  py_publicstate.hpp  py_worldstate.hpp
src/nor/binding/trampolines/: action.hpp  chance_outcome.hpp  env.hpp  infostate.hpp  observation.hpp  publicstate.hpp  worldstate.hpp
test/: main_tests.cpp  tests.cpp
test/common_test_utils/: testing_utils.hpp
test/games/kuhn_poker/: fixtures.hpp  test_state.cpp
test/games/leduc_poker/: fixtures.hpp  test_state.cpp  utils.hpp
test/games/stratego/: Action.h  Board.cpp  Board.h  BoardStratego.cpp  BoardStratego.h  CMakeLists.txt  Config.cpp  Config.hpp  Game.cpp  Game.h  GameStratego.cpp  GameStratego.h  Logic.cpp  Logic.h  LogicStratego.cpp  LogicStratego.h  Piece.h  PieceStratego.h  Representer.cpp  Representer.h  RepresenterStratego.cpp  RepresenterStratego.h  State.cpp  State.h  StateStratego.cpp  StateStratego.h  StrategoDefs.hpp  fixtures.hpp  main.cpp  minimal_setup.hpp  state_fixture.hpp  test_config.cpp  test_game.cpp  test_logic.cpp  test_piece.cpp  test_state.cpp  utils.cpp  utils.hpp
test/games/stratego/core/include/aze/: agent.h  arena.h  aze.h  game.h  types.h
test/games/stratego/core/include/aze/agent/: Agent.h
test/games/stratego/core/include/aze/game/: Action.h  Board.h  Defs.h  Game.h  Logic.h  Move.h  Piece.h  Position.h  Representer.h  State.h
test/games/stratego/core/include/aze/utils/: logging_macros.h  permutations.h  utils.h
test/install/: CMakeLists.txt  main.cpp
test/libnor/: cfr_run_funcs.hpp  dummy_classes.hpp  rm_specific_testing_utils.hpp  test_cfr.cpp  test_cfr_discounted.cpp  test_cfr_exponential.cpp  test_cfr_linear.cpp  test_cfr_monte_carlo.cpp  test_cfr_plus.cpp  test_cfr_vanilla.cpp  test_exploitability.cpp  test_fosg_concept.cpp  test_fosg_concepts.cpp  test_fosg_traits.cpp  test_helpers.cpp  test_holder.cpp  test_mccfr.cpp  test_policy.cpp  test_rm.cpp  test_rm_utils.cpp  test_type_traits.cpp  test_utils.cpp  utils_for_testing.hpp
test/sandbox/: sandbox.cpp  sandbox.hpp
(+9 files in other folders)
